--- a/public/style.css
+++ b/public/style.css
@@ -52,6 +52,7 @@ body{
     justify-content: center;
     align-items: center;
     background-color: white;
+    margin:0px 0px 10px 0px ;
 }
 
 .movies-box img{
@@ -105,4 +106,39 @@ body{
     justify-content: center;
     letter-spacing: 0.02em;
     color: #FFFFFF;
+}
+
+.footer-container{
+    width: 375px;
+    height: 117px;
+    background: #DFE6ED;
+    border: 1px solid #9EADBA;
+    display: flex;
+}
+
+.selected-movie-box{
+    background: #FFFFFF;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    width: 64px;
+    height: 89px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 22px 14px 22px 8px;
+}
+
+.selected-movie-box img{
+    width: 48px;
+    height: 72px;
+}
+
+.title-selected-movie{
+ font-style: normal;
+font-weight: 400;
+font-size: 26px;
+line-height: 30px;
+display: flex;
+align-items: center;
+color: #293845;
 }
