--- a/public/style.css
+++ b/public/style.css
@@ -125,7 +125,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 22px 14px 22px 8px;
+    margin: 15px 14px 22px 8px;
 }
 
 .selected-movie-box img{
@@ -139,6 +139,121 @@ font-weight: 400;
 font-size: 26px;
 line-height: 30px;
 display: flex;
-align-items: center;
 color: #293845;
+flex-direction: column;
+justify-content: center;
+}
+
+.title-selected-movie-box{
+margin-bottom: 5px;
+}
+
+.legend{
+    display:flex;
+    justify-content: space-evenly;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 15px;
+    display: flex;
+    align-items: center;
+    letter-spacing: -0.013em;
+    color: #4E5A65;
+}
+
+.choice{
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: black;
+    margin-bottom: 8px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.option{
+    display:flex;
+    flex-direction: column;
+}
+
+.selected{
+    background-color: #8DD7CF;
+    border: 1px solid #1AAE9E;
+}
+
+.true{
+    background-color: #C3CFD9;
+    border: 1px solid #808F9D;
+}
+
+.false{
+    background-color: #FBE192;
+    border: 1px solid #F7C52B;
+}
+
+.forms{
+    background-color: white;
+    
+}
+
+.forms input{
+    width: 80%;
+    height: 45px;
+    margin-left: 30px;
+    margin-bottom: 10px;
+}
+
+.forms h1{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    color: #293845;
+    margin-left: 30px;
+    margin-bottom: 10px;
+}
+
+.button-box{
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    padding-bottom: 30px;
+}
+
+button{
+    width: 225px;
+    height: 42px;
+    background: #E8833A;
+    border-radius: 3px;
+    font-size: 18px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+}
+
+.cadeira{
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 11px;
+    color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.seats{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: white;
+    gap: 7px;
+    padding: 5px 6px 15px 6px;
 }
